# BinaryShield

./: CMakeLists.txt
.github/workflows/: build.yml
